--- a/blog.html
+++ b/blog.html
@@ -25,11 +25,24 @@
   </header>
 
   <main>
-    <section id="blog" class="card">
-      <h2>Blog</h2>
-      <p class="section-intro">Updates, reflections, and stories from my engineering journey.</p>
-      <div class="gallery" id="blog-list">
-        <!-- Blog posts will be dynamically inserted here -->
+    <section class="content">
+      <div id="blogContentWrapper" class="card blog-card">
+        <!-- Hero band -->
+        <div class="blog-hero">
+          <div class="blog-hero-inner">
+            <h1 class="blog-hero-title">Blog</h1>
+            <p class="blog-hero-tagline">
+              Updates, reflections, and stories from my engineering journey.
+            </p>
+          </div>
+        </div>
+
+        <!-- Body -->
+        <div class="blog-layout">
+          <div id="blog-list" class="gallery">
+            <!-- Blog posts will be dynamically inserted here -->
+          </div>
+        </div>
       </div>
     </section>
   </main>
