--- a/about.html
+++ b/about.html
@@ -49,6 +49,17 @@
             </div>
           </div>
         </div>
+
+        <!-- Timeline section -->
+        <section id="aboutTimelineSection" class="about-timeline-section">
+          <h2 class="about-timeline-title">Timeline</h2>
+          <p class="about-timeline-subtitle">
+            A quick look at where I've been and what I've worked on.
+          </p>
+          <div id="aboutTimeline" class="timeline">
+            <!-- Timeline items injected by JS -->
+          </div>
+        </section>
       </div>
     </section>
   </main>
