--- a/admin/index.html
+++ b/admin/index.html
@@ -326,6 +326,57 @@
         .btn-secondary:hover {
             background: #4b5563;
         }
+        /* Header Roles editor in Site Settings */
+        .header-roles-editor-list {
+            display: flex;
+            flex-direction: column;
+            gap: 0.75rem;
+            margin-top: 0.5rem;
+        }
+        .header-role-item {
+            border-radius: 8px;
+            border: 1px solid #e5e7eb;
+            background: #f9fafb;
+            padding: 0.75rem 0.85rem;
+            display: flex;
+            flex-direction: column;
+            gap: 0.4rem;
+        }
+        .header-role-top-row {
+            display: flex;
+            gap: 0.5rem;
+            align-items: center;
+        }
+        .header-role-input {
+            flex: 1;
+            padding: 0.5rem;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            font-size: 0.95rem;
+        }
+        .header-role-controls {
+            display: flex;
+            gap: 0.4rem;
+        }
+        .header-role-controls button {
+            font-size: 0.8rem;
+            padding: 0.25rem 0.5rem;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            background: #e5e7eb;
+            color: #374151;
+        }
+        .header-role-controls button:hover {
+            background: #d1d5db;
+        }
+        .header-role-remove {
+            color: #b91c1c !important;
+            background: #fee2e2 !important;
+        }
+        .header-role-remove:hover {
+            background: #fecaca !important;
+        }
     </style>
 </head>
 <body>
@@ -660,7 +711,22 @@
                         </div>
                     </div>
 
-                    <div class="form-actions">
+                    <hr style="margin: 2rem 0;" />
+
+                    <h3>Header Role Phrases</h3>
+                    <p style="color:#666; margin-bottom: 0.75rem;">
+                        These phrases appear after your name on the About page and loop with the cursor animation.
+                    </p>
+
+                    <div id="headerRolesList" class="header-roles-editor-list">
+                        <!-- items injected by JS -->
+                    </div>
+
+                    <button type="button" id="headerRolesAddBtn" class="btn-secondary" style="margin-top: 0.75rem;">
+                        + Add Role Phrase
+                    </button>
+
+                    <div class="form-actions" style="margin-top: 1.5rem;">
                         <button type="button" id="siteSaveBtn" class="btn-primary">Save Site Settings</button>
                     </div>
                     <p id="siteLastSaved" style="color: #666; font-size: 0.85rem; margin-top: 1rem;"></p>
@@ -1515,6 +1581,80 @@
         const siteSaveBtn = document.getElementById('siteSaveBtn');
         const siteLastSaved = document.getElementById('siteLastSaved');
 
+        // Header roles state
+        let headerRoles = [];
+
+        // Header roles editor render function
+        function renderHeaderRolesEditor() {
+            const list = document.getElementById('headerRolesList');
+            if (!list) return;
+
+            list.innerHTML = '';
+
+            headerRoles.forEach((role, index) => {
+                const item = document.createElement('div');
+                item.className = 'header-role-item';
+                item.dataset.index = index;
+
+                item.innerHTML = `
+                    <div class="header-role-top-row">
+                        <input
+                            type="text"
+                            class="header-role-input"
+                            value="${role || ''}"
+                            placeholder="e.g. Electrical Engineer"
+                        />
+                        <div class="header-role-controls">
+                            <button type="button" class="header-role-up">▲</button>
+                            <button type="button" class="header-role-down">▼</button>
+                            <button type="button" class="header-role-remove">Remove</button>
+                        </div>
+                    </div>
+                `;
+
+                const inputEl = item.querySelector('.header-role-input');
+                const upBtn = item.querySelector('.header-role-up');
+                const downBtn = item.querySelector('.header-role-down');
+                const removeBtn = item.querySelector('.header-role-remove');
+
+                inputEl.addEventListener('input', () => {
+                    headerRoles[index] = inputEl.value;
+                });
+
+                upBtn.addEventListener('click', () => {
+                    if (index === 0) return;
+                    const tmp = headerRoles[index - 1];
+                    headerRoles[index - 1] = headerRoles[index];
+                    headerRoles[index] = tmp;
+                    renderHeaderRolesEditor();
+                });
+
+                downBtn.addEventListener('click', () => {
+                    if (index === headerRoles.length - 1) return;
+                    const tmp = headerRoles[index + 1];
+                    headerRoles[index + 1] = headerRoles[index];
+                    headerRoles[index] = tmp;
+                    renderHeaderRolesEditor();
+                });
+
+                removeBtn.addEventListener('click', () => {
+                    headerRoles.splice(index, 1);
+                    renderHeaderRolesEditor();
+                });
+
+                list.appendChild(item);
+            });
+        }
+
+        // Wire the Add Role button
+        const headerRolesAddBtn = document.getElementById('headerRolesAddBtn');
+        if (headerRolesAddBtn) {
+            headerRolesAddBtn.addEventListener('click', () => {
+                headerRoles.push('');
+                renderHeaderRolesEditor();
+            });
+        }
+
         // GIF background controls
         const bgGifEnabledInput = document.getElementById('bgGifEnabledInput');
         const bgGifUrlInput = document.getElementById('bgGifUrlInput');
@@ -1623,6 +1763,12 @@
                     bgGifBlurValue.textContent = `${blur}px`;
                 }
 
+                // Load header roles
+                headerRoles = Array.isArray(data.headerRoles) && data.headerRoles.length > 0
+                    ? data.headerRoles.slice()
+                    : ['Electrical Engineer'];
+                renderHeaderRolesEditor();
+
                 if (data.updatedAt) {
                     siteLastSaved.textContent = `Last saved: ${new Date(data.updatedAt).toLocaleString()}`;
                 }
@@ -1641,6 +1787,18 @@
                 const opacityValue = opacityPercent / 100; // convert percent to 0.xx
                 const blurValue = bgGifBlurRange ? parseInt(bgGifBlurRange.value, 10) || 0 : 7;
 
+                // Collect header roles from the editor
+                const headerRolesList = document.getElementById('headerRolesList');
+                if (headerRolesList) {
+                    const items = Array.from(headerRolesList.querySelectorAll('.header-role-item'));
+                    headerRoles = items
+                        .map((item) => {
+                            const input = item.querySelector('.header-role-input');
+                            return input ? input.value.trim() : '';
+                        })
+                        .filter((val) => val.length > 0);
+                }
+
                 const payload = {
                     siteTitle: siteTitleField.value,
                     siteSubtitle: siteSubtitleField.value,
@@ -1651,7 +1809,8 @@
                     backgroundGifEnabled: bgGifEnabledInput ? bgGifEnabledInput.checked : false,
                     backgroundGifUrl: bgGifUrlInput ? bgGifUrlInput.value.trim() : '',
                     backgroundGifOpacity: opacityValue,
-                    backgroundGifBlur: blurValue
+                    backgroundGifBlur: blurValue,
+                    headerRoles: headerRoles
                 };
 
                 const res = await fetch('/.netlify/functions/updateSiteSettings', {
