--- a/about.html
+++ b/about.html
@@ -2,77 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Me - MB Engineering</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style2.css" />
+  <meta http-equiv="refresh" content="0; url=/" />
+  <title>About - Matt Banzhof</title>
 </head>
 <body>
-  <header>
-    <a href="index.html" class="home-link" data-dynamic>
-      <h1 class="site-title"></h1>
-      <p class="site-subtitle"></p>
-    </a>
-    <nav>
-      <ul>
-        <li><a href="about.html">About</a></li>
-        <li><a href="resume.html">Resume</a></li>
-        <li><a href="gallery.html">Project Gallery</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <section class="content">
-      <div id="aboutContentWrapper" data-dynamic class="card about-card">
-        <!-- Hero band inside the card -->
-        <div class="about-hero">
-          <div class="about-hero-inner">
-            <h1 id="aboutPageTitle" class="about-hero-title"></h1>
-            <p id="aboutTagline" class="about-hero-tagline"></p>
-          </div>
-        </div>
-
-        <!-- Two-column layout: avatar + content -->
-        <div class="about-layout">
-          <div class="about-avatar-wrapper">
-            <img id="aboutAvatar" class="about-avatar" src="" alt="Portrait">
-          </div>
-          <div class="about-body">
-            <div id="aboutBody" class="markdown-content"></div>
-
-            <div class="about-cta-row">
-              <a href="blog.html" class="btn-primary-pill">View Blog</a>
-              <a href="contact.html" class="btn-primary-pill">Contact Me</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Timeline section -->
-        <section id="aboutTimelineSection" class="about-timeline-section">
-          <h2 class="about-timeline-title">Timeline</h2>
-          <p class="about-timeline-subtitle">
-            A quick look at where I've been and what I've worked on.
-          </p>
-          <div id="aboutTimeline" class="timeline">
-            <!-- Timeline items injected by JS -->
-          </div>
-        </section>
-      </div>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 MB Engineering</p>
-  </footer>
-
-  <!-- Site-wide scripts -->
-  <script src="site.js"></script>
-  <script src="script.js"></script>
-  <!-- Markdown renderer + About loader -->
-  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-  <script src="about.js"></script>
+  <p>Redirecting to <a href="/">home page</a>...</p>
 </body>
 </html>
