--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
     </a>
     <nav>
       <ul>
-        <li><a href="about.html">About</a></li>
+        <li><a href="index.html">About</a></li>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="gallery.html">Project Gallery</a></li>
         <li><a href="blog.html">Blog</a></li>
