resume pdf viewer

--- a/resume.html
+++ b/resume.html
@@ -40,7 +40,10 @@
         <div class="resume-layout">
           <div class="resume-viewer-card">
             <div id="resumePreview" class="resume-preview">
-              <!-- iframe or fallback injected by resume.js -->
+              <canvas id="resumeCanvas" class="resume-canvas"></canvas>
+              <div id="resumeFallback" class="resume-fallback" style="display:none;">
+                <p>Preview unavailable. Please use the button below to download and view the full resume.</p>
+              </div>
             </div>
           </div>
 
@@ -75,6 +78,8 @@
 
   <script src="site.js"></script>
   <script src="script.js"></script>
+  <!-- PDF.js for clean resume rendering -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="resume.js"></script>
 </body>
 </html>
